--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,457 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  box-sizing:border-box;
+}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800');
+
+html,body{
+  margin:0;
+  padding:0;
+  background-color: #FFF7ED;
+  font-family:Inter,sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+a.active-link{
+  font-weight: bold;
+  text-decoration: underline;
+  color: #161616;
+}
+
+.site-wrapper{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+header{
+  height:110px;
+  display:flex;
+  align-items:center;
+  padding-block:10px;
+}
+
+header .site-logo {
+  color: black;
+  margin-right: auto;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 25px;
+}
+
+header a {
+  text-decoration: none;
+  color: #4D4D4D;
+  font-weight: 600;
+  padding: 5px 20px;
+}
+
+header a:hover {
+  color: #161616;
+  text-decoration: underline;
+}
+
+main {
+  margin-bottom: 84px;
+}
+
+footer {
+  background-color: #161616;
+  color: #AAAAAA;
+  height: 74px;
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  font-weight: 500;
+}
+
+.link-button {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  padding: .75rem 1.375rem;
+  color: initial;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform .1s ease-in-out;
+  font-family: inherit;
+}
+.link-button-btn:hover{
+  transform: translate(1px, 1px);
+}
+
+.back-button {
+  display: block;
+  color: black;
+  text-decoration: none;
+  margin-top: 60px;
+  margin-left: 20px;
+}
+
+.back-button span:hover {
+  text-decoration: underline;
+}
+
+/* HOME PAGE */
+.homepage-content{
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)), url("./images/homepage.jpg") no-repeat center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 350px;
+  color: white;
+  padding: 45px 23px;
+}
+
+.homepage-content h1 {
+  font-weight: 700;
+  font-size: 2.25rem;
+  line-height: 42px;
+}
+.homepage-content p {
+  line-height: 24px;
+}
+.homepage-content a{
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  background-color: #FF8C38;
+  border: none;
+  width: 100%;
+  margin-top: 27px;
+  padding-block: .75rem;
+  color: white;
+  font-weight: 700;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: transform .1s ease-in-out;
+}
+
+.homepage-content a:hover {
+  transform: translate(1px, 1px);
+}
+
+/*** ABOUT PAGE ***/
+
+.aboutpage-image{
+  max-width: 100%;
+}
+
+.about-page-content {
+  padding-inline: 23px;
+  color: #161616;
+  margin-bottom: 55px;
+}
+.about-page-content h1 {
+  line-height: 38px;
+}
+
+.about-page-content p {
+  line-height: 22px;
+}
+.side-color{
+  background-color: #FFCC8D;
+  color: #161616;
+  padding-inline: 32px;
+  padding-bottom: 32px;
+  margin-inline: 27px;
+  border-radius: 5px;
+}
+
+.side-color h2{
+  margin: 0;
+  padding-block: 37px;
+}
+
+.side-color .link-button{
+  background-color: #161616;
+  color: white;
+  border-radius: 10px;
+}
+
+
+/* VANS PAGE */
+.vans-page-container{
+  padding-inline: 23px;
+}
+
+.vans{
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  gap:34px;
+  margin-top:57px;
+}
+
+.vans-container a {
+  color: #161616;
+  text-decoration: none;
+}
+
+.vans-container img {
+  max-width: 100%;
+  border-radius:5px;
+}
+
+/* .vans-page-container button {
+  margin-right: 20px;
+  cursor: pointer;
+} */
+
+.van-type{
+  height:34px;
+  padding:6px 26px;
+  font-style:normal;
+  font-weight:500;
+  border:none;
+  border-radius:5px;
+  background:#FFEAD0;
+  color:#4D4D4D;
+  transition: 200ms all cubic-bezier(0.4,0,0.2,1)
+}
+
+.van-type:hover{
+  color:#FFEAD0;
+}
+
+.van-type:focus{
+  outline:none;
+}
+
+.van-type.selected{
+  color:#FFEAD0;
+}
+
+.van-type.simple:hover, .van-type.simple.selected{
+  background:#E17654;
+}
+
+.van-type.rugged:hover, .van-type.rugged.selected {
+  background-color: #115E59;
+}
+
+.van-type.luxury:hover, .van-type.luxury.selected {
+  background-color: #161616;
+}
+
+/* .van-type.clear-filters {
+  margin-left: -20px;
+  height: 34px;
+  padding: 6px 26px;
+  font-style: normal;
+  font-weight: 500;
+  border: none;
+  border-radius: 5px;
+  text-decoration: underline;
+  background-color: transparent;
+  color: #4D4D4D;
+} */
+
+/*
+i[class*='van-type-'] {
+  padding: 7px 14px;
+} */
+.van-detail-container {
+  padding: 27px;
+}
+
+/* .van-detail-container .back-button {
+  color: black;
+  text-decoration: none;
+} */
+
+/* .van-detail-container .back-button:visited {
+
+} */
+
+/* .van-detail-container .back-button span {
+  text-decoration: underline;
+} */
+
+.van-detail {
+  display: flex;
+  flex-direction: column;
+  color: #161616;
+}
+
+.van-detail img {
+  border-radius: 5px;
+  margin-block: 47px;
+}
+
+.van-detail h2 {
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+.van-detail > i {
+  align-self: flex-start;
+}
+
+.van-detail .van-price {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.van-detail .van-price span {
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.van-detail .link-button {
+  background-color: #FF8C38;
+  color: white;
+  font-size: 1.125rem;
+}
+
+
+/* HOST PAGE */
+
+.host-nav{
+  display:flex;
+}
+.host-nav a {
+  text-decoration: none;
+  color:#4D4D4D;
+  padding: 5px 20px;
+  font-weight:500;
+}
+
+.host-nav a:hover{
+  text-decoration: underline;
+  color:#161616;
+  font-weight: 600;
+}
+
+
+
+/* ** HOST/VANS ** */
+.host-van-link-wrapper{
+  color:unset;
+  text-decoration: unset;
+}
+
+.host-vans-list{
+  padding-inline:20px;
+}
+
+.host-vans-title{
+  padding-inline:20px;
+}
+
+.host-van-single{
+  display:flex;
+  align-items: center;
+  background:white;
+  margin-bottom:15px;
+  padding-block:18px;
+  padding-left:24px;
+}
+
+.host-van-single > img {
+  height:70px;
+  border-radius:5px;
+  margin-right:17px;
+}
+
+.host-van-info h3{
+  font-size:20px;
+  font-weight:600;
+  margin-block:10px;
+}
+
+.host-van-info p {
+  margin-block:10px;
+}
+
+.host-van-detail-layout-container {
+  background-color: white;
+  padding: 20px;
+  margin: 30px 20px;
+}
+
+.host-van-detail {
+  display: flex;
+  align-items: center;
+}
+
+.host-van-detail > img {
+  height: 160px;
+  border-radius: 5px;
+  margin-right: 20px;
+}
+
+.host-van-detail-info-text > h3 {
+  margin-top: 24px;
+  margin-bottom: 5px;
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.host-van-detail-info-text > h4 {
+  font-size: 20px;
+  margin-block: 0;
+}
+
+
+.host-van-detail-nav {
+  display: flex;
+  margin-block: 25px;
+}
+
+.host-van-detail-nav a {
+  text-decoration: none;
+  color: #4D4D4D;
+  font-weight: 500;
+  padding: 5px 20px;
+}
+
+.host-van-detail-nav a:first-of-type {
+  text-decoration: none;
+  color: #4D4D4D;
+  font-weight: 500;
+  padding: 5px 15px;
+  margin-left: -15px;
+}
+
+.host-van-detail-nav a:hover {
+  color: #161616;
+  text-decoration: underline;
+  font-weight: 700;
+}
+
+.host-van-detail-info > h4 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+}
+.host-van-detail-info > h4 > span {
+  font-weight: 500;
+}
+
+.host-van-price {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.host-van-price > span {
+  font-size: 16px;
+  color: #4D4D4D;
+}
+
+.host-van-detail-image {
+  height: 100px;
+  border-radius: 5px;
 }
