--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,20 @@
-*{
-  box-sizing:border-box;
+* {
+  box-sizing: border-box;
 }
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800");
 
-html,body{
-  margin:0;
-  padding:0;
-  background-color: #FFF7ED;
-  font-family:Inter,sans-serif;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #fff7ed;
+  font-family: Inter, sans-serif;
 }
 
 a {
   text-decoration: unset;
   color: unset;
 }
-
 
 body::-webkit-scrollbar {
   display: none;
@@ -25,23 +25,23 @@ body {
   scrollbar-width: none;
 }
 
-a.active-link{
+a.active-link {
   font-weight: bold;
   text-decoration: underline;
   color: #161616;
 }
 
-.site-wrapper{
+.site-wrapper {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
-header{
-  height:110px;
-  display:flex;
-  align-items:center;
-  padding-block:10px;
+header {
+  height: 110px;
+  display: flex;
+  align-items: center;
+  padding-block: 10px;
 }
 
 header .site-logo {
@@ -52,19 +52,19 @@ header .site-logo {
   font-size: 25px;
 }
 
-header a, .log-out {
+header a,
+.log-out {
   text-decoration: none;
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-weight: 600;
   padding: 5px 20px;
 }
 
-.log-out{
-  border:none;
-  border-radius:5px;
-  cursor:pointer;
+.log-out {
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
-
 
 header a:hover {
   color: #161616;
@@ -91,7 +91,7 @@ main {
 
 footer {
   background-color: #161616;
-  color: #AAAAAA;
+  color: #aaaaaa;
   height: 74px;
   display: flex;
   flex-shrink: 0;
@@ -106,15 +106,15 @@ footer {
   text-align: center;
   text-decoration: none;
   border: none;
-  padding: .75rem 1.375rem;
+  padding: 0.75rem 1.375rem;
   color: initial;
   font-weight: 700;
   border-radius: 5px;
   cursor: pointer;
-  transition: transform .1s ease-in-out;
+  transition: transform 0.1s ease-in-out;
   font-family: inherit;
 }
-.link-button-btn:hover{
+.link-button-btn:hover {
   transform: translate(1px, 1px);
 }
 
@@ -131,8 +131,9 @@ footer {
 }
 
 /* HOME PAGE */
-.homepage-content{
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)), url("./images/homepage.png") no-repeat center center;
+.homepage-content {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.46), rgba(0, 0, 0, 0.46)),
+    url("./images/homepage.png") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -150,20 +151,20 @@ footer {
 .homepage-content p {
   line-height: 24px;
 }
-.homepage-content a{
+.homepage-content a {
   display: inline-block;
   text-align: center;
   text-decoration: none;
-  background-color: #FF8C38;
+  background-color: #ff8c38;
   border: none;
   width: 100%;
   margin-top: 27px;
-  padding-block: .75rem;
+  padding-block: 0.75rem;
   color: white;
   font-weight: 700;
   border-radius: 5px;
   cursor: pointer;
-  transition: transform .1s ease-in-out;
+  transition: transform 0.1s ease-in-out;
 }
 
 .homepage-content a:hover {
@@ -172,7 +173,7 @@ footer {
 
 /*** ABOUT PAGE ***/
 
-.aboutpage-image{
+.aboutpage-image {
   max-width: 100%;
 }
 
@@ -188,8 +189,8 @@ footer {
 .about-page-content p {
   line-height: 22px;
 }
-.side-color{
-  background-color: #FFCC8D;
+.side-color {
+  background-color: #ffcc8d;
   color: #161616;
   padding-inline: 32px;
   padding-bottom: 32px;
@@ -197,39 +198,37 @@ footer {
   border-radius: 5px;
 }
 
-.side-color h2{
+.side-color h2 {
   margin: 0;
   padding-block: 37px;
 }
 
-.side-color .link-button{
+.side-color .link-button {
   background-color: #161616;
   color: white;
   border-radius: 10px;
 }
 
-
 /* VANS PAGE */
-.vans-page-container{
+.vans-page-container {
   padding-inline: 20px;
 }
 
 .van-list-filter-buttons {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .van-list-filter-buttons > a {
   margin-right: 15px;
 }
 
-
-.vans{
-  display:grid;
+.vans {
+  display: grid;
   grid-template-columns: 1fr 1fr;
   justify-items: center;
-  gap:34px;
-  margin-top:57px;
+  gap: 34px;
+  margin-top: 57px;
 }
 
 .vans-container a {
@@ -239,47 +238,50 @@ footer {
 
 .vans-container img {
   max-width: 100%;
-  border-radius:5px;
+  border-radius: 5px;
 }
 
 .vans-page-container button {
-  margin-right:20px;
-  cursor:pointer;
+  margin-right: 20px;
+  cursor: pointer;
 }
 
-.van-type{
-  height:34px;
-  padding:6px 26px;
-  font-style:normal;
-  font-weight:500;
-  border:none;
-  border-radius:5px;
-  background:#FFEAD0;
-  color:#4D4D4D;
-  transition: 200ms all cubic-bezier(0.4,0,0.2,1);
+.van-type {
+  height: 34px;
+  padding: 6px 26px;
+  font-style: normal;
+  font-weight: 500;
+  border: none;
+  border-radius: 5px;
+  background: #ffead0;
+  color: #4d4d4d;
+  transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.van-type:hover{
-  color:#FFEAD0;
+.van-type:hover {
+  color: #ffead0;
 }
 
-.van-type:focus{
-  outline:none;
+.van-type:focus {
+  outline: none;
 }
 
-.van-type.selected{
-  color:#FFEAD0;
+.van-type.selected {
+  color: #ffead0;
 }
 
-.van-type.simple:hover, .van-type.simple.selected{
-  background:#E17654;
+.van-type.simple:hover,
+.van-type.simple.selected {
+  background: #e17654;
 }
 
-.van-type.rugged:hover, .van-type.rugged.selected {
-  background-color: #115E59;
+.van-type.rugged:hover,
+.van-type.rugged.selected {
+  background-color: #115e59;
 }
 
-.van-type.luxury:hover, .van-type.luxury.selected {
+.van-type.luxury:hover,
+.van-type.luxury.selected {
   background-color: #161616;
 }
 
@@ -293,11 +295,10 @@ footer {
   border-radius: 5px;
   text-decoration: underline;
   background-color: transparent;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
-
-i[class*='van-type-'] {
+i[class*="van-type-"] {
   padding: 7px 14px;
 }
 .van-detail-container {
@@ -307,7 +308,7 @@ i[class*='van-type-'] {
 .van-detail-container .back-button {
   color: black;
   text-decoration: none;
-  margin:0;
+  margin: 0;
 }
 
 /* .van-detail-container .back-button:visited {
@@ -349,69 +350,66 @@ i[class*='van-type-'] {
 }
 
 .van-detail .link-button {
-  background-color: #FF8C38;
+  background-color: #ff8c38;
   color: white;
   font-size: 1.125rem;
 }
 
-
 /* HOST PAGE */
 
-.host-nav{
-  display:flex;
+.host-nav {
+  display: flex;
 }
 .host-nav a {
   text-decoration: none;
-  color:#4D4D4D;
+  color: #4d4d4d;
   padding: 5px 20px;
-  font-weight:500;
+  font-weight: 500;
 }
 
-.host-nav a:hover{
+.host-nav a:hover {
   text-decoration: underline;
-  color:#161616;
+  color: #161616;
   font-weight: 600;
 }
 
-
-
 /* ** HOST/VANS ** */
-.host-van-link-wrapper{
-  color:unset;
+.host-van-link-wrapper {
+  color: unset;
   text-decoration: unset;
 }
 
-.host-vans-list{
-  padding-inline:20px;
+.host-vans-list {
+  padding-inline: 20px;
 }
 
-.host-vans-title{
-  padding-inline:20px;
+.host-vans-title {
+  padding-inline: 20px;
 }
 
-.host-van-single{
-  display:flex;
+.host-van-single {
+  display: flex;
   align-items: center;
-  background:white;
-  margin-bottom:15px;
-  padding-block:18px;
-  padding-left:24px;
+  background: white;
+  margin-bottom: 15px;
+  padding-block: 18px;
+  padding-left: 24px;
 }
 
 .host-van-single > img {
-  height:70px;
-  border-radius:5px;
-  margin-right:17px;
+  height: 70px;
+  border-radius: 5px;
+  margin-right: 17px;
 }
 
-.host-van-info h3{
-  font-size:20px;
-  font-weight:600;
-  margin-block:10px;
+.host-van-info h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-block: 10px;
 }
 
 .host-van-info p {
-  margin-block:10px;
+  margin-block: 10px;
 }
 
 .host-van-detail-layout-container {
@@ -443,7 +441,6 @@ i[class*='van-type-'] {
   margin-block: 0;
 }
 
-
 .host-van-detail-nav {
   display: flex;
   margin-block: 25px;
@@ -451,14 +448,14 @@ i[class*='van-type-'] {
 
 .host-van-detail-nav a {
   text-decoration: none;
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-weight: 500;
   padding: 5px 20px;
 }
 
 .host-van-detail-nav a:first-of-type {
   text-decoration: none;
-  color: #4D4D4D;
+  color: #4d4d4d;
   font-weight: 500;
   padding: 5px 15px;
   margin-left: -15px;
@@ -486,7 +483,7 @@ i[class*='van-type-'] {
 
 .host-van-price > span {
   font-size: 16px;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
 .host-van-detail-image {
@@ -494,14 +491,14 @@ i[class*='van-type-'] {
   border-radius: 5px;
 }
 
-button{
-  font-family:inherit;
+button {
+  font-family: inherit;
 }
 
 /* ** ERROR PAGE ** */
 
 .not-found-container {
-  padding-inline: 26px;
+  padding-inline: 20px;
 }
 
 .not-found-container .link-button {
@@ -509,7 +506,6 @@ button{
   background-color: #161616;
   color: white;
 }
-
 
 /* ** LOGIN PAGE ** */
 
@@ -533,7 +529,7 @@ button{
   text-indent: 10px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
   font-weight: 400;
-  font-family:inherit;
+  font-family: inherit;
 }
 
 .login-form > input:focus {
@@ -550,14 +546,14 @@ button{
 }
 
 .login-form > button {
-  background-color: #FF8C38;
+  background-color: #ff8c38;
   border: none;
   border-radius: 6px;
   height: 55px;
   margin-top: 22px;
   color: white;
   font-family: inherit;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 .login-form > button:disabled {
@@ -764,21 +760,21 @@ img.graph {
   margin-right: 5px;
 }
 
-.testing{
-  display:flex;
+.testing {
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .testing p {
-  margin-block:5px;
-  font-weight:700;
+  margin-block: 5px;
+  font-weight: 700;
 }
-.testing p span{
+.testing p span {
   color: red;
-  font-weight:900;
+  font-weight: 900;
 }
 
-.loading{
-  padding-inline:20px;
+.loading {
+  padding-inline: 20px;
 }
